# OilLib

./: CMakeLists.txt  README
cmake/: UseSWIG.cmake
src/: agent.hpp  config.hpp.in  currency.hpp  hello.cpp  hello.hpp  hello.swg  market.hpp  time_series.hpp  trading_rule.hpp
test/: CMakeLists.txt  macros.cmake
test/000/: .gitignore  CMakeLists.txt  exemplo.xls  test.cpp
test/api/php5/: runme.php
test/api/python/: runme.py
test/api/ruby/: runme.rb
